fix(PythonLanguage): исправил баг связанный с добавлением в неизменяемый список